# PaperTalk-IR-Skills

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README-zh-TW.md  README.md  TUTORIAL-zh-TW.md  TUTORIAL.md
.github/workflows/: ci.yml
docs/: VERIFICATION.md  design-philosophy.md  ir-and-isa.md
docs/superpowers/plans/: 2026-06-15-paper2beamer.md  (+1 more)
eval/: EVAL.md  README.md  grade_structural.py  rubric.md
eval/fixtures/aiayn/: REFRESH.md  (+2 more)
eval/tests/: test_grade_structural.py
paper2beamer/: SKILL.md  pyproject.toml
paper2beamer/isa/: Sidebar.yaml  Simple.yaml  _base_latex.yaml  isa.schema.json
paper2beamer/isa/extensions/: Zsem.yaml
paper2beamer/references/: ir-schema.md  ir_schema.json  isa-setup.md  pass-contracts.md  pipeline-overview.md  simple-theme-isa.md  slide-ir.md
paper2beamer/scripts/: build.sh  capacity_probe.py  conformance.py  emit_beamer.py  frontend_docling.py  ir_common.py  isa_resolve.py  latex_log.py  repair_router.py
paper2beamer/tests/: VERIFICATION.md  conftest.py  pytest.ini  test_conformance.py  test_e2e_frontend.py  test_emit_beamer.py  test_frontend_docling.py  test_frontend_helpers.py  test_integration_build.py  test_ir_common.py  test_isa_resolve.py  test_latex_log.py  test_repair_router.py  test_schema_consistency.py  test_sidebar_theme.py
paper2beamer/tests/fixtures/: deck.expected.tex
paper2beamer/tests/fixtures/overflow_build/: ir.v4.json
paper2beamer/tests/fixtures/sample_build/: ir.v4.json
template/: beamerthemeSidebar.sty  beamerthemeSimple-manual.md  beamerthemeSimple.sty  demo-theme.tex  domain.md  theme.tex
(+10 files in other folders)
